// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Files Edit Group Handler process method should correctly determine fileType upon initial creation of lfFile 1`] = `"Temp file location: /tmp/dataset.txt"`;

exports[`Files Edit Group Handler process method should correctly determine fileType upon initial creation of lfFile 2`] = `"Successfully uploaded edits to mainframe."`;

exports[`Files Edit Group Handler process method should correctly determine fileType upon initial creation of lfFile 3`] = `
{
  "commandResponse": "[32mSuccessfully uploaded edits to mainframe.[39m",
  "success": true,
}
`;

exports[`Files Edit Group Handler process method should make and upload edits successfully 1`] = `"Temp file location: /tmp/dataset.txt"`;

exports[`Files Edit Group Handler process method should make and upload edits successfully 2`] = `"Successfully uploaded edits to mainframe."`;

exports[`Files Edit Group Handler process method should make and upload edits successfully 3`] = `
{
  "commandResponse": "[32mSuccessfully uploaded edits to mainframe.[39m",
  "success": true,
}
`;

exports[`Files Edit Group Handler process method should upload edits unsuccessfully 1`] = `"Temp file location: /tmp/dataset.txt"`;

exports[`Files Edit Group Handler process method should upload edits unsuccessfully 2`] = `"Exiting now. Temp file persists for editing."`;

exports[`Files Edit Group Handler process method should upload edits unsuccessfully 3`] = `
{
  "commandResponse": "[32mExiting now. Temp file persists for editing.[39m",
  "success": true,
}
`;
